[gd_scene load_steps=12 format=3 uid="uid://b4uvvjgnbxj25"]

[ext_resource type="Script" uid="uid://bfjerxwtpow2o" path="res://core/ui/common/settings/audio_settings_menu.gd" id="1_hjnkk"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="1_x5cm4"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="2_73ivm"]
[ext_resource type="PackedScene" uid="uid://c6fg6uvng0ovi" path="res://core/systems/input/input_watcher.tscn" id="2_n36nh"]
[ext_resource type="PackedScene" uid="uid://cemxrvvjgm4g" path="res://core/ui/components/slider.tscn" id="2_qsi2y"]
[ext_resource type="PackedScene" uid="uid://xei5afwefxud" path="res://core/ui/components/dropdown.tscn" id="3_pixnq"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="3_r3dmc"]
[ext_resource type="Resource" uid="uid://iqrotrmq62i6" path="res://assets/state/state_machines/settings_state_machine.tres" id="4_sfspm"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="5_06jyg"]
[ext_resource type="Resource" uid="uid://bdvbnao6j0o18" path="res://assets/state/states/settings_audio.tres" id="6_v2pqc"]
[ext_resource type="Script" uid="uid://ohebcttenf0j" path="res://core/systems/input/focus_group_setter.gd" id="7_l6bmd"]

[node name="AudioSettingsMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_hjnkk")

[node name="InputWatcher" parent="." instance=ExtResource("2_n36nh")]
stop_propagation = true
action = "ogui_east"

[node name="StateUpdater" parent="InputWatcher" instance=ExtResource("3_r3dmc")]
state_machine = ExtResource("4_sfspm")
action = 2
on_signal = "input_released"

[node name="StateWatcher" parent="." instance=ExtResource("5_06jyg")]
state = ExtResource("6_v2pqc")

[node name="FocusGroupSetter" type="Node" parent="StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("7_l6bmd")
target = NodePath("../../VBoxContainer/FocusGroup")
on_signal = "state_entered"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="FocusGroup" parent="VBoxContainer" node_paths=PackedStringArray("current_focus") instance=ExtResource("2_73ivm")]
current_focus = NodePath("../VolumeSlider")

[node name="AudioLabel" parent="VBoxContainer" instance=ExtResource("1_x5cm4")]
layout_mode = 2
text = "Audio"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VolumeSlider" parent="VBoxContainer" instance=ExtResource("2_qsi2y")]
unique_name_in_owner = true
layout_mode = 2
text = "Volume"
step = 5.0

[node name="OutputDevice" parent="VBoxContainer" instance=ExtResource("3_pixnq")]
unique_name_in_owner = true
layout_mode = 2
title = "Output Device"
description = ""

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="MicLabel" parent="VBoxContainer" instance=ExtResource("1_x5cm4")]
visible = false
layout_mode = 2
text = "Microphone"

[node name="MicVolumeSlider" parent="VBoxContainer" instance=ExtResource("2_qsi2y")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Volume"
step = 5.0

[node name="InputDevice" parent="VBoxContainer" instance=ExtResource("3_pixnq")]
unique_name_in_owner = true
visible = false
layout_mode = 2
title = "Input Device"
description = ""
